2017-XX-XX  Lcferrum <lcferrum@yandex.com>
	
	* Release 2.3
	* Fixed:
		- Removed odd debug output in /cmd
		- Fixed crash on exit when /cmd:sub is used
	* Added:
		- Windowless verbose output (message box) is now topmost and has input focus
		- +c/-c setting (close process)
		- 'parent' parameter for /pid switch

2017-01-17  Lcferrum <lcferrum@yandex.com>
	
	* Release 2.2
	* Fixed:
		- Fixed duplicated "NOT found" message with /inr switch
		- Fixed possible crash when using /mod, /gld, /d3d and /ogl switches

2016-10-22  Lcferrum <lcferrum@yandex.com>
	
	* Release 2.1
	* Changed:
		- Redesigned /inr and /fgd switches
		- Added short delay after /bpp
		- Revamped output
		- Arguments starting with '#' or '\0' are now ignored
		- Path comparing now omits backslash from globbing
		- /sec now indifferent to loop (+l/-l), ignore (+i/-i) and new negate (+n/-n) settings
		- Test setting (+t/-t) now doesn't mark result processes as killed
		- Process times are now queried on demand - when switches need them
	* Fixed:
		- Fixed sending ENTER to wrong console for windowless (hidden) version
	* Added:
		- /cmd switch (load arguments from file)
		- /lst switch (show and manage process list)
		- /prn switch (print something to stdout)
		- +r/-r setting (recently created sorting)
		- +m/-m setting (mute stdout and stderr outputs)
		- +b/-b setting (blacklist results)
		- +w/-w setting (whitelist results)
		- +n/-n setting (continue on negative)
	* Removed:
		- /blk switch (use +b/-b setting instead)

2016-04-15  Lcferrum <lcferrum@yandex.com>
	
	* Release 2.0
	* Changed:
		- Major refactoring, new object-oriented structure, moved to C++11 standard and UNICODE API
		- Better process usage and killing algorithms
		- Renamed 'ghost' parameter to 'vista' for /inr switch
		- /fsc switch revamped, now works with multi-monitor setups and has new parameters
		- Can now pass multiple wildcards to switches
		- All path comparing is now case-insensitive
	* Added:
		- Windows NT4 support