@@ -4,9 +4,14 @@
 	* Fixed:
 		- Removed odd debug output in /cmd
 		- Fixed crash on exit when /cmd:sub is used
-	* Added:
+	* Changed:
 		- Windowless verbose output (message box) is now topmost and has input focus
+	* Added:
 		- +c/-c setting (close process)
+		- +e/-e setting (expand environment variables)
+		- /trm switch (unconditionally return positive result)
+		- /psh switch (push argument to argumet stack)
+		- /pop switch (pop argument from argument stack)
 		- 'parent' parameter for /pid switch
 
 2017-01-17  Lcferrum <lcferrum@yandex.com>
